tests/specs/run/duplicate_parse_error/main.ts
for (console.log("a") of [1]);
